<resources>
    <string name="app_name">Learn App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile">Mobile</string>
    <string name="alerts">Alerts</string>
    <string name="advisory">Advisory</string>
    <string name="best_practises">Best Practises</string>
    <string name="news">News</string>
    <string name="all">All</string>
    <string name="settings">Settings</string>
    <string name="font_size">Font Size</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="kannada">ಕನ್ನಡ</string>
    <string name="hindi">हिंदी</string>
    <string name="home">Home</string>
    <string name="checker">Checker</string>
    <string name="learn">Learn</string>
    <string name="help">Help</string>
    <string name="choose_language">Select Your Preferred language</string>
</resources>