<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/top_curved_bg">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_sm"
            android:paddingVertical="10dp"
            android:text="@string/choose_language"
            android:textColor="@color/text_clr"
            android:textSize="@dimen/font_xl"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/gap_lg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/check_box_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroup">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textColor="@color/text_clr"
                    android:textSize="@dimen/font_vlg"
                    android:text="@string/english"
                    android:id="@+id/english_rb"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textColor="@color/text_clr"
                    android:textSize="@dimen/font_vlg"
                    android:text="@string/kannada"
                    android:layout_marginTop="@dimen/gap_xl"
                    android:id="@+id/kannada_rb"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textColor="@color/text_clr"
                    android:textSize="@dimen/font_vlg"
                    android:text="@string/hindi"
                    android:layout_marginTop="@dimen/gap_xl"
                    android:id="@+id/hindi_rb"/>

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>