<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/gap_md">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_back"
                android:onClick="backPress"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/settings"
                android:layout_marginStart="@dimen/gap_sm"
                android:textSize="@dimen/font_xl"
                android:textColor="@color/text_clr"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/text_clr_v_light"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/gap_md">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/gap_md"
                android:background="@drawable/item_bg">

                <TextView
                    android:id="@+id/font_size_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/font_size"
                    android:textColor="@color/text_clr"
                    android:textSize="@dimen/font_xl"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/gap_sm"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Aa"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textColor="@color/text_clr"
                        android:textSize="@dimen/font_vlg"/>

                    <SeekBar
                        android:id="@+id/text_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:progressBackgroundTint="@color/text_clr_light"
                        android:layout_weight="8"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Aa"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textColor="@color/text_clr"
                        android:textSize="@dimen/font_xxxl"/>

                </LinearLayout>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="@dimen/gap_md"
                android:layout_marginTop="@dimen/gap_sm"
                android:background="@drawable/item_bg"
                android:onClick="languageClick"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/text_clr"
                    android:textSize="@dimen/font_xl"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="@dimen/gap_sm">

                    <TextView
                        android:id="@+id/language_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/english"
                        android:textColor="@color/text_clr_light"
                        android:textSize="@dimen/font_xl"/>


                </LinearLayout>

            </FrameLayout>

        </LinearLayout>
    </LinearLayout>

</layout>